Prepare repo as a template
This commit adjusts the file structure and contents so that it is
ready to be consumed as a template.

--- a/yt/index.html
+++ b/yt/index.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title>JZimz: YouTube</title>
-</head>
-
-<body>
-  Sending you over to my Youtube channel! If you are not redirected
-  automatically, 
-  <a href="https://www.youtube.com/channel/UCxyaFKlRSXJ-D0-UICa6W3g">
-    click here
-  </a>.
-  <script>
-    window.location.replace(
-      'https://www.youtube.com/channel/UCxyaFKlRSXJ-D0-UICa6W3g');
-  </script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>YouTube Redirect</title>
+  </head>
+  <body>
+    Sending you over to my Youtube channel! If you are not redirected
+    automatically,
+    <!-- Also include the destination link here as a fallback in case the
+      redirect doesn't happen automatically. -->
+    <a href="">click here</a>.
+    <script>
+      // Include the destination link here.
+      window.location.replace('');
+    </script>
+  </body>
 
 </html>
